syntax = "proto3";
package ProtoFileGenerator;

message Beam {
   string Id = 1;
   double JawX1 = 2;
   double JawX2 = 3;
   double JawY1 = 4;
   double JawY2 = 5;
   int32 StartBeamletIndex = 6;
   int32 EndBeamletIndex = 7;
}

message Beamlet {
   int32 Index = 1;
   string BeamId = 2;
   float XSize = 3;
   float YSize = 4;
   float XStart = 5;
   float YStart = 6;
}

message BeamletDose {
   int32 Index = 1;
   float Dose = 2;
}

message DoseToPointsData {
   string FileGUID = 1;
   repeated Structure Structures = 2;
   repeated Beam Beams = 3;
   repeated Point Points = 4;
   repeated Beamlet Beamlets = 5;
   repeated PointDose PointDoses = 6;
}

message Point {
   int32 Index = 1;
   string StructureId = 2;
   float X = 3;
   float Y = 4;
   float Z = 5;
}

message PointDose {
   int32 Index = 1;
   repeated BeamletDose BeamletDoses = 2;
}

message Structure {
   string Id = 1;
   double pointsDistanceCM = 2;
   int32 StartPointIndex = 3;
   int32 EndPointIndex = 4;
}
